--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -9,6 +9,8 @@
     <%= link_to "Delete", delete_recipe_path(@recipe) %>
   <% end %>
   <% if !@recipe.ratings.find_by(user_id: current_user.id) %>
-    <p>Vote!</p>
+    <%= form_for :vote do |f| %>
+    <%= f.submit 'Vote!' %>
+    <% end %>
   <% end %>
 <% end %>
