Add additional show tab functionality on recipes index

--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -14,7 +14,7 @@ tab tab tab tab
   <% if @recipes %>
     <% @recipes.where(category_id: 2).each do |recipe| %>
       <li><%= recipe.name %><br>
-      <%= recipe.ratings.length  %> forks || <%= link_to recipe.user.username, user_path(recipe.user) %>
+      <span class="forks"><%= recipe.ratings.length  %></span> forks || <%= link_to recipe.user.username, user_path(recipe.user) %>
       </li>
     <% end %>
   <% end %>
@@ -24,7 +24,7 @@ tab tab tab tab
   <% if @recipes %>
     <% @recipes.where(category_id: 1).each do |recipe| %>
       <li><%= recipe.name %><br>
-      <%= recipe.ratings.length  %> forks || <%= link_to recipe.user.username, user_path(recipe.user) %>
+      <span class="forks"><%= recipe.ratings.length  %></span> forks || <%= link_to recipe.user.username, user_path(recipe.user) %>
       </li>
     <% end %>
   <% end %>
@@ -34,7 +34,7 @@ tab tab tab tab
   <% if @recipes %>
     <% @recipes.where(category_id: 3).each do |recipe| %>
       <li><%= recipe.name %><br>
-      <%= recipe.ratings.length  %> forks || <%= link_to recipe.user.username, user_path(recipe.user) %>
+    <span class="forks"><%= recipe.ratings.length  %></span> forks || <%= link_to recipe.user.username, user_path(recipe.user) %>
       </li>
     <% end %>
   <% end %>
@@ -44,7 +44,7 @@ tab tab tab tab
   <% if @recipes %>
     <% @recipes.where(category_id: 4).each do |recipe| %>
       <li><%= recipe.name %><br>
-      <%= recipe.ratings.length  %> forks || <%= link_to recipe.user.username, user_path(recipe.user) %>
+      <span class="forks"><%= recipe.ratings.length  %></span> forks || <%= link_to recipe.user.username, user_path(recipe.user) %>
       </li>
     <% end %>
   <% end %>
