--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -18,4 +18,12 @@
 			</tr>
 		<% end %>
 	</table>
+<% else %>
+	<p>There are no sales today!</p>
 <% end %>
+
+<%= form_for :reset do |f| %>
+<%= f.submit 'Reset!' %>
+<% end %>
+
+
