--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,11 +1,11 @@
-<h1>Today sales</h1>
+<h1>Today's sales</h1>
 
 <% if @solddish %>
 	<table border=1>
 		<tr>
 			<th>Recipe name</th>
 			<th>Quantity sold</th>
-			<th>Comission to be paid</th>
+			<th>Commission to be paid</th>
 			<th>Recipe owner</th>
 		</tr>
 		<% @solddish.each do |dish| %>
