Add cancancan functionality to recipe show page

--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -13,7 +13,7 @@ tab tab tab tab
 <ul class="tab-content" id="main">
   <% if @recipes %>
     <% @recipes.where(category_id: 2).each do |recipe| %>
-      <li><%= recipe.name %><br>
+      <li><%= link_to recipe.name, recipe_path(recipe) %><br>
       <span class="forks"><%= recipe.ratings.length  %></span> forks || <%= link_to recipe.user.username, user_path(recipe.user) %>
       </li>
     <% end %>
@@ -23,7 +23,7 @@ tab tab tab tab
 <ul class="tab-content" id="breakfast">
   <% if @recipes %>
     <% @recipes.where(category_id: 1).each do |recipe| %>
-      <li><%= recipe.name %><br>
+      <li><%= link_to recipe.name, recipe_path(recipe) %><br>
       <span class="forks"><%= recipe.ratings.length  %></span> forks || <%= link_to recipe.user.username, user_path(recipe.user) %>
       </li>
     <% end %>
@@ -33,7 +33,7 @@ tab tab tab tab
 <ul class="tab-content" id="appetizer">
   <% if @recipes %>
     <% @recipes.where(category_id: 3).each do |recipe| %>
-      <li><%= recipe.name %><br>
+      <li><%= link_to recipe.name, recipe_path(recipe) %><br>
     <span class="forks"><%= recipe.ratings.length  %></span> forks || <%= link_to recipe.user.username, user_path(recipe.user) %>
       </li>
     <% end %>
@@ -43,7 +43,7 @@ tab tab tab tab
 <ul class="tab-content" id="dessert">
   <% if @recipes %>
     <% @recipes.where(category_id: 4).each do |recipe| %>
-      <li><%= recipe.name %><br>
+      <li><%= link_to recipe.name, recipe_path(recipe) %><br>
       <span class="forks"><%= recipe.ratings.length  %></span> forks || <%= link_to recipe.user.username, user_path(recipe.user) %>
       </li>
     <% end %>
