--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,13 +1,55 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+
+
   <title>Jack</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= stylesheet_link_tag "styles.css" %>
+  <link rel="stylesheet" href="/css/bootstrap.css">
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+
+
+  <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+      </ul>
+
+
+
+
+    <ul class="navbar-nav navbar-right">
+        <!-- <li> <a href="/recipes">Recipes</a></li> -->
+        <li> <%=link_to 'Recipes', recipes_path %>
+    </ul>
+
+    <ul class="navbar-nav navbar-right">
+
+        <li> <%= link_to 'Profile', users_path(@user) %>
+    </ul>
+
+
+
+      <% if !current_user %>
+     <ul class="navbar-nav navbar-right">
+        <li> <a href="/users/new">Register</a></li>
+    </ul>
+    <% end %>
+
+    <ul class="navbar-nav navbar-right">
+        <li> <a href="/">Home</a></li>
+    </ul>
+
+
+  </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
 </head>
 <body>
+
+
 
 <% if current_user %>
   Signed in as <%= current_user.username %> | <%= link_to "Logout", '/logout' %>
