--- a/app/views/sold_dishes/new.html.erb
+++ b/app/views/sold_dishes/new.html.erb
@@ -1,7 +1,7 @@
 <h1>Today's sales</h1>
 
 <% if @solddish %>
-  <table border=1>
+  <table border=1 id="eod">
     <tr>
       <th>Recipe name</th>
       <th>Quantity sold</th>
@@ -10,10 +10,10 @@
     </tr>
     <% @solddish.each do |dish| %>
       <tr>
-            <% comission = dish.number_sold*dish.price_sold*0.1 %>
+            <% commission = dish.number_sold*dish.price_sold*0.1 %>
           <td><%= Recipe.find_by(id: dish.recipe_id).name %></td>
           <td><%= dish.number_sold %></td>
-          <td><%= comission%></td>
+          <td><%= @commission%></td>
           <td><%= User.find_by(id: Recipe.find_by(id: dish.recipe_id).user_id).username %></td>
       </tr>
     <% end %>
@@ -22,8 +22,10 @@
   <p>There are no sales today!</p>
 <% end %>
 
-<%= form_for :reset do |f| %>
-<%= f.submit 'Reset!' %>
+
+<%= form_for :solddishes, :method => :delete, :html => {:id => 'eod'} do |f| %>
+
+  <%= f.submit 'Reset!' %>
 <% end %>
 
 
