--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
 	<ul >
 	    <% @user.recipes.each do |recipe| %>
 	      <li><%= recipe.name %><br>
-	      <span class="forks"><%= Rating.find_by(recipe_id: recipe.id).rating/ recipe.ratings.count %></span> forks <br>
+	      <span class="forks"><%= @recipe.avg_rating %></span> forks <br>
 	         <%= link_to "Edit", edit_recipe_path(recipe) %>
 	      </li>
 	    <% end %>
